[gd_scene load_steps=8 format=3 uid="uid://jphqct536elm"]

[ext_resource type="Script" path="res://scenes/map_editor/map_editor.gd" id="1_fr50u"]
[ext_resource type="PackedScene" uid="uid://b8opucxucl032" path="res://world/world.tscn" id="1_w0dbr"]
[ext_resource type="Theme" uid="uid://3t61g0061mea" path="res://assets/theme.tres" id="2_kvbud"]
[ext_resource type="PackedScene" uid="uid://pu46mkcjdswb" path="res://scenes/esc_menu/esc_menu.tscn" id="2_qxuk0"]

[sub_resource type="Gradient" id="Gradient_1u8we"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.327381, 0.693452)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vmnme"]
gradient = SubResource("Gradient_1u8we")
width = 8
height = 8
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8q531"]
bg_color = Color(0, 0, 0, 0.752941)

[node name="MapEditor" type="Node2D"]
script = ExtResource("1_fr50u")

[node name="EscMenu" parent="." instance=ExtResource("2_qxuk0")]

[node name="World" parent="." instance=ExtResource("1_w0dbr")]

[node name="Center" type="Sprite2D" parent="World"]
unique_name_in_owner = true
z_index = 3000
z_as_relative = false
texture = SubResource("GradientTexture2D_vmnme")

[node name="MouseCursor" type="Sprite2D" parent="World"]
unique_name_in_owner = true
z_index = 999

[node name="MapEditorUI" type="CanvasLayer" parent="."]

[node name="DrawingUI" type="PanelContainer" parent="MapEditorUI"]
unique_name_in_owner = true
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_kvbud")

[node name="MarginContainer" type="MarginContainer" parent="MapEditorUI/DrawingUI"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="GridContainer" parent="MapEditorUI/DrawingUI/MarginContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MapEditorUI/DrawingUI/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="CenterBtn" type="Button" parent="MapEditorUI/DrawingUI/MarginContainer/HBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
text = "Center"

[node name="HBoxContainer2" type="HBoxContainer" parent="MapEditorUI/DrawingUI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MapEditorUI/DrawingUI/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DrawBtn" type="Button" parent="MapEditorUI/DrawingUI/MarginContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Draw Tile"

[node name="EraseBtn" type="Button" parent="MapEditorUI/DrawingUI/MarginContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Erase Tile"

[node name="ManualTerritoryBtn" type="Button" parent="MapEditorUI/DrawingUI/MarginContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "New Territory"

[node name="RegionsBtn" type="Button" parent="MapEditorUI/DrawingUI/MarginContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Generate Territories
"

[node name="HBoxContainer2" type="HBoxContainer" parent="MapEditorUI/DrawingUI/MarginContainer/HBoxContainer2"]
layout_mode = 2

[node name="ResetBtn" type="Button" parent="MapEditorUI/DrawingUI/MarginContainer/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("2_kvbud")
theme_override_colors/font_color = Color(0.792157, 0, 0, 1)
text = "Reset Island"

[node name="NextStageBtn" type="Button" parent="MapEditorUI/DrawingUI/MarginContainer/HBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Next Stage >"

[node name="TeamsUI" type="PanelContainer" parent="MapEditorUI"]
unique_name_in_owner = true
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_kvbud")

[node name="MarginContainer" type="MarginContainer" parent="MapEditorUI/TeamsUI"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MapEditorUI/TeamsUI/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MapEditorUI/TeamsUI/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PreviousStageBtn" type="Button" parent="MapEditorUI/TeamsUI/MarginContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "< Previous Stage"

[node name="PlaceTeamBtn" type="Button" parent="MapEditorUI/TeamsUI/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Set Team"

[node name="PlaceTeamNum" type="SpinBox" parent="MapEditorUI/TeamsUI/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
max_value = 10.0
value = 1.0
rounded = true
alignment = 1

[node name="PickBuildingBtn" type="OptionButton" parent="MapEditorUI/TeamsUI/MarginContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="Buildingbtn" type="Button" parent="MapEditorUI/TeamsUI/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Build"

[node name="HBoxContainer2" type="HBoxContainer" parent="MapEditorUI/TeamsUI/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MapEditorUI/TeamsUI/MarginContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Map Name"

[node name="MapNameEdit" type="LineEdit" parent="MapEditorUI/TeamsUI/MarginContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "savegame"
max_length = 20
expand_to_text_length = true

[node name="SaveBtn" type="Button" parent="MapEditorUI/TeamsUI/MarginContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Save Map"

[node name="PlayBtn" type="Button" parent="MapEditorUI/TeamsUI/MarginContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Play Map"

[node name="LoadButton" type="Button" parent="MapEditorUI"]
offset_top = 472.0
offset_right = 40.0
offset_bottom = 493.0
theme = ExtResource("2_kvbud")
text = "Load"

[node name="Loader" type="PanelContainer" parent="MapEditorUI"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8q531")

[node name="LoaderPanel" type="PanelContainer" parent="MapEditorUI/Loader"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_kvbud")

[node name="MarginContainer" type="MarginContainer" parent="MapEditorUI/Loader/LoaderPanel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MapEditorUI/Loader/LoaderPanel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MapEditorUI/Loader/LoaderPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Saved Maps"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SavedMapsGrid" type="GridContainer" parent="MapEditorUI/Loader/LoaderPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="ReturnButton" type="Button" parent="MapEditorUI/Loader/LoaderPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Return"

[connection signal="pressed" from="MapEditorUI/DrawingUI/MarginContainer/HBoxContainer/HBoxContainer2/CenterBtn" to="." method="_on_center_btn_pressed"]
[connection signal="pressed" from="MapEditorUI/DrawingUI/MarginContainer/HBoxContainer2/HBoxContainer/DrawBtn" to="." method="_on_draw_btn_pressed"]
[connection signal="pressed" from="MapEditorUI/DrawingUI/MarginContainer/HBoxContainer2/HBoxContainer/EraseBtn" to="." method="_on_erase_btn_pressed"]
[connection signal="pressed" from="MapEditorUI/DrawingUI/MarginContainer/HBoxContainer2/HBoxContainer/ManualTerritoryBtn" to="." method="_on_manual_territory_btn_pressed"]
[connection signal="pressed" from="MapEditorUI/DrawingUI/MarginContainer/HBoxContainer2/HBoxContainer/RegionsBtn" to="." method="_on_regions_btn_pressed"]
[connection signal="pressed" from="MapEditorUI/DrawingUI/MarginContainer/HBoxContainer2/HBoxContainer2/ResetBtn" to="." method="_on_reset_btn_pressed"]
[connection signal="pressed" from="MapEditorUI/DrawingUI/MarginContainer/HBoxContainer2/HBoxContainer2/NextStageBtn" to="." method="_on_next_stage_pressed"]
[connection signal="pressed" from="MapEditorUI/TeamsUI/MarginContainer/HBoxContainer/HBoxContainer/PreviousStageBtn" to="." method="_on_previous_stage_btn_pressed"]
[connection signal="pressed" from="MapEditorUI/TeamsUI/MarginContainer/HBoxContainer/HBoxContainer/PlaceTeamBtn" to="." method="_on_place_team_btn_pressed"]
[connection signal="value_changed" from="MapEditorUI/TeamsUI/MarginContainer/HBoxContainer/HBoxContainer/PlaceTeamNum" to="." method="_on_place_team_num_value_changed"]
[connection signal="item_selected" from="MapEditorUI/TeamsUI/MarginContainer/HBoxContainer/HBoxContainer/PickBuildingBtn" to="." method="_on_pick_building_btn_item_selected"]
[connection signal="pressed" from="MapEditorUI/TeamsUI/MarginContainer/HBoxContainer/HBoxContainer/Buildingbtn" to="." method="_on_buildingbtn_pressed"]
[connection signal="text_changed" from="MapEditorUI/TeamsUI/MarginContainer/HBoxContainer/HBoxContainer2/MapNameEdit" to="." method="_on_map_name_edit_text_changed"]
[connection signal="pressed" from="MapEditorUI/TeamsUI/MarginContainer/HBoxContainer/HBoxContainer2/SaveBtn" to="." method="_on_save_btn_pressed"]
[connection signal="pressed" from="MapEditorUI/TeamsUI/MarginContainer/HBoxContainer/HBoxContainer2/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="MapEditorUI/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="MapEditorUI/Loader/LoaderPanel/MarginContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
